[project]
name = "siamcnn-fashion"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "xj63", email = "xj63work@163.com" }]
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.1",
    "numpy>=2.2.4",
    "scikit-learn>=1.6.1",
    "torch>=2.6.0",
    "torchvision>=0.21.0",
    "tqdm>=4.67.1",
]
